# pytest-flakiness

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  features.md  pyproject.toml  release
.github/workflows/: publish.yml  test.yml
src/pytest_flakiness/: flakiness_report.py  git.py  github_oidc.py  plugin.py  reporter.py  uploader.py
tests/: test_github_oidc.py  test_integration.py  test_normalize_path.py
